--- a/css/custom.css
+++ b/css/custom.css
@@ -707,7 +707,7 @@ header.main-header .header-sticky.active{
 
 .hero{
 	position: relative;
-	background: url('../images/hero-bg.jpg');
+	background: url('../images/hero-bg.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
@@ -752,7 +752,7 @@ header.main-header .header-sticky.active{
 
 .hero.hero-slider-layout .hero-slide{
 	position: relative;
-	background: url('../images/hero-bg.jpg');
+	background: url('../images/hero-bg.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
